--- a/2023_Graduate_Project/View/Base.lproj/Main.storyboard
+++ b/2023_Graduate_Project/View/Base.lproj/Main.storyboard
@@ -1208,6 +1208,7 @@
                         <outlet property="detailLabel" destination="ymb-jb-Ssm" id="bKJ-4x-L0r"/>
                         <outlet property="numberLabel" destination="AbK-n9-uQp" id="YhA-bQ-8PR"/>
                         <outlet property="placeLabel" destination="9wK-xW-tDP" id="Jtr-Ch-6gB"/>
+                        <outlet property="requestStackView" destination="ZPm-Tr-T8C" id="sbx-CC-c2s"/>
                         <outlet property="stackview1" destination="K2p-fe-CyD" id="FhI-zg-nHe"/>
                         <outlet property="stackview2" destination="3K4-MA-U2L" id="vh6-Pv-3Aj"/>
                         <outlet property="stackview3" destination="EVD-cs-tax" id="gCi-dw-l3P"/>
@@ -1232,7 +1233,7 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="1339"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0RA-kL-2Es" userLabel="제일큰뷰">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="734"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="834"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k3W-3E-RTT" userLabel="상단배너뷰">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
@@ -1312,7 +1313,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hGJ-N0-gPs" userLabel="날씨뷰">
-                                                <rect key="frame" x="0.0" y="550" width="414" height="134"/>
+                                                <rect key="frame" x="0.0" y="650" width="414" height="134"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="deZ-yV-dYa">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="134"/>
@@ -1353,7 +1354,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="utL-fp-tB3" userLabel="하단정보뷰">
-                                                <rect key="frame" x="0.0" y="684" width="414" height="50"/>
+                                                <rect key="frame" x="0.0" y="784" width="414" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="소프트웨어학과 원동현 졸업작품" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="78W-KS-RzL">
                                                         <rect key="frame" x="10" y="10" width="394" height="30"/>
@@ -1372,13 +1373,13 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRU-eP-hCx" userLabel="버튼뷰들">
-                                                <rect key="frame" x="0.0" y="250" width="414" height="300"/>
+                                                <rect key="frame" x="0.0" y="250" width="414" height="400"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="vBe-mo-Gyt" userLabel="큰 버튼스택뷰">
-                                                        <rect key="frame" x="25" y="25" width="364" height="250"/>
+                                                        <rect key="frame" x="25" y="25" width="364" height="350"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0DH-w6-x53">
-                                                                <rect key="frame" x="0.0" y="0.0" width="364" height="73.5"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="364" height="76.5"/>
                                                                 <state key="normal" title="Button"/>
                                                                 <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="수리 견적 요청">
                                                                     <imageReference key="image" image="figure.wave" catalog="system" symbolScale="default" renderingMode="template"/>
@@ -1392,7 +1393,7 @@
                                                                 </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pfV-DD-Ggd">
-                                                                <rect key="frame" x="0.0" y="88.5" width="364" height="73"/>
+                                                                <rect key="frame" x="0.0" y="91.5" width="364" height="76"/>
                                                                 <state key="normal" title="Button"/>
                                                                 <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="익명 게시판">
                                                                     <imageReference key="image" image="pencil.line" catalog="system" renderingMode="template"/>
@@ -1406,7 +1407,7 @@
                                                                 </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SN3-tO-Dcw">
-                                                                <rect key="frame" x="0.0" y="176.5" width="364" height="73.5"/>
+                                                                <rect key="frame" x="0.0" y="182.5" width="364" height="76.5"/>
                                                                 <state key="normal" title="Button"/>
                                                                 <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="내 주변 업체 &amp; 별점 확인">
                                                                     <imageReference key="image" image="network" catalog="system" symbolScale="large" renderingMode="template"/>
@@ -1420,15 +1421,27 @@
                                                                     <segue destination="0RF-k2-vD7" kind="push" id="qi5-6D-I5A"/>
                                                                 </connections>
                                                             </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cE6-98-dIa">
+                                                                <rect key="frame" x="0.0" y="274" width="364" height="76"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="채팅">
+                                                                    <imageReference key="image" image="message.badge.filled.fill.rtl" catalog="system" symbolScale="large" renderingMode="template"/>
+                                                                    <backgroundConfiguration key="background" cornerRadius="20" strokeWidth="0.0">
+                                                                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                                                    </backgroundConfiguration>
+                                                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage"/>
+                                                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </buttonConfiguration>
+                                                            </button>
                                                         </subviews>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="250" id="3SO-3R-6hG"/>
+                                                            <constraint firstAttribute="height" constant="350" id="3SO-3R-6hG"/>
                                                         </constraints>
                                                     </stackView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.97254901960784312" green="0.96862745098039216" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="300" id="JZE-FK-3Qf"/>
+                                                    <constraint firstAttribute="height" constant="400" id="JZE-FK-3Qf"/>
                                                     <constraint firstItem="vBe-mo-Gyt" firstAttribute="top" secondItem="YRU-eP-hCx" secondAttribute="top" constant="25" id="g9U-Te-t4h"/>
                                                     <constraint firstItem="vBe-mo-Gyt" firstAttribute="leading" secondItem="YRU-eP-hCx" secondAttribute="leading" constant="25" id="rgL-rj-Kaq"/>
                                                     <constraint firstAttribute="trailing" secondItem="vBe-mo-Gyt" secondAttribute="trailing" constant="25" id="tes-Kh-e52"/>
@@ -1505,6 +1518,7 @@
         <image name="googleLoginLogo" width="33.333332061767578" height="33.333332061767578"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="map" catalog="system" width="128" height="112"/>
+        <image name="message.badge.filled.fill.rtl" catalog="system" width="128" height="116"/>
         <image name="network" catalog="system" width="128" height="123"/>
         <image name="pencil.line" catalog="system" width="128" height="98"/>
         <image name="person" catalog="system" width="128" height="121"/>
@@ -1520,6 +1534,9 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
