--- a/2023_Graduate_Project/View/Base.lproj/Main.storyboard
+++ b/2023_Graduate_Project/View/Base.lproj/Main.storyboard
@@ -570,21 +570,50 @@
                                                 <rect key="frame" x="0.0" y="36.333333333333371" width="335" height="141.33333333333334"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="HOx-zA-mjJ">
-                                                        <rect key="frame" x="0.0" y="50" width="335" height="43.666667938232422"/>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="55" id="gO9-gp-2Vr">
+                                                        <rect key="frame" x="0.0" y="50" width="335" height="55"/>
                                                         <autoresizingMask key="autoresizingMask"/>
-                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HOx-zA-mjJ" id="qcT-BM-2DO">
-                                                            <rect key="frame" x="0.0" y="0.0" width="335" height="43.666667938232422"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gO9-gp-2Vr" id="pFP-Ie-jyx">
+                                                            <rect key="frame" x="0.0" y="0.0" width="335" height="55"/>
                                                             <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="44" translatesAutoresizingMaskIntoConstraints="NO" id="GfS-zr-taf">
+                                                                    <rect key="frame" x="10" y="10" width="315" height="35"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="작성자 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s3a-lO-TVn">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="55" height="35"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9B-g3-UOO">
+                                                                            <rect key="frame" x="65" y="0.0" width="250" height="35"/>
+                                                                            <string key="text">내용내용내용내용내용내용내내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용용</string>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
+                                                                    <constraints>
+                                                                        <constraint firstItem="a9B-g3-UOO" firstAttribute="leading" secondItem="s3a-lO-TVn" secondAttribute="trailing" constant="10" id="16Y-S3-Pkc"/>
+                                                                    </constraints>
+                                                                </stackView>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="bottom" secondItem="GfS-zr-taf" secondAttribute="bottom" constant="10" id="6jf-pK-y3d"/>
+                                                                <constraint firstItem="GfS-zr-taf" firstAttribute="top" secondItem="pFP-Ie-jyx" secondAttribute="top" constant="10" id="OwL-5g-WUj"/>
+                                                                <constraint firstAttribute="trailing" secondItem="GfS-zr-taf" secondAttribute="trailing" constant="10" id="T7R-pJ-XwZ"/>
+                                                                <constraint firstItem="GfS-zr-taf" firstAttribute="leading" secondItem="pFP-Ie-jyx" secondAttribute="leading" constant="10" id="cbZ-xz-jRG"/>
+                                                            </constraints>
                                                         </tableViewCellContentView>
                                                     </tableViewCell>
                                                 </prototypes>
                                             </tableView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="0s5-Rz-jIP">
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="0s5-Rz-jIP">
                                                 <rect key="frame" x="0.0" y="193.66666666666663" width="335" height="34.333333333333343"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iEx-zH-h6T">
-                                                        <rect key="frame" x="0.0" y="0.0" width="265.33333333333331" height="34.333333333333336"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="274.33333333333331" height="34.333333333333336"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
@@ -600,8 +629,12 @@
                                             </stackView>
                                         </subviews>
                                         <constraints>
+                                            <constraint firstItem="0s5-Rz-jIP" firstAttribute="top" secondItem="fKE-jr-IgE" secondAttribute="bottom" constant="16" id="AQO-Pb-aqj"/>
                                             <constraint firstItem="0s5-Rz-jIP" firstAttribute="leading" secondItem="mpw-kJ-GL9" secondAttribute="leading" id="WvW-hF-CyF"/>
+                                            <constraint firstAttribute="trailing" secondItem="fKE-jr-IgE" secondAttribute="trailing" id="h2C-ZQ-f69"/>
+                                            <constraint firstItem="fKE-jr-IgE" firstAttribute="top" secondItem="2nO-Xx-jec" secondAttribute="bottom" constant="16" id="iyI-UT-OY6"/>
                                             <constraint firstAttribute="trailing" secondItem="0s5-Rz-jIP" secondAttribute="trailing" id="mgf-5p-89l"/>
+                                            <constraint firstItem="fKE-jr-IgE" firstAttribute="leading" secondItem="mpw-kJ-GL9" secondAttribute="leading" id="rJv-Iw-1iv"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
@@ -621,7 +654,7 @@
                         <outlet property="addCommentButton" destination="mjc-xX-uac" id="wld-lw-5eY"/>
                         <outlet property="commentTextField" destination="iEx-zH-h6T" id="Sxd-ik-y8y"/>
                         <outlet property="detailTextView" destination="jMJ-Fz-vZe" id="nfA-jR-f9d"/>
-                        <outlet property="tableView" destination="HOx-zA-mjJ" id="vaZ-aS-EgN"/>
+                        <outlet property="tableView" destination="fKE-jr-IgE" id="9Ar-GC-K4J"/>
                         <outlet property="titleLabel" destination="9JL-17-AJS" id="K96-RU-LJO"/>
                     </connections>
                 </viewController>
